<resources>
    <string name="app_name">HAPPYY DRIVE</string>
    <string name="api_key">AIzaSyCXJobvhbpvmBp8_JklIuM_IBRFo9p750I</string>
    <string name="browser_api_key">AIzaSyCXJobvhbpvmBp8_JklIuM_IBRFo9p750I</string>
    <string name="action_menu">Menu</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_edit_account">Edit</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="label_choose_an_action">Choose an action!</string>
    <string name="label_gallery">Galary</string>
    <string name="label_camera">Camera</string>
    <string name="btn_accounts">PROFILE</string>
    <string name="btn_add">Add</string>
    <string name="btn_any">Any</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_close">Close</string>
    <string name="btn_comments">Comments</string>
    <string name="btn_complete_trip">Complete Trip</string>
    <string name="btn_confirm_you_have_arrived">Confirm you have arrived</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_earnings">EARNING</string>
    <string name="btn_leaderbord">LEADERBORD</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_home">HOME</string>
    <string name="btn_issues">Issues</string>
    <string name="btn_location">Location</string>
    <string name="btn_log_in">Login</string>
    <string name="btn_login_here">Login Here</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_name">Name</string>
    <string name="btn_gender">Gender</string>
    <string name="btn_ok">OK</string>
    <string name="btn_open">Open</string>
    <string name="btn_open_settings">GO TO SETTINGS</string>
    <string name="btn_ratings">RATING</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_register">Register</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_resend">Resend Verification Code</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_restore">Restore</string>
    <string name="btn_retake">Retake</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_save">Save</string>
    <string name="btn_select">Select</string>
    <string name="btn_select_country">Select Country</string>
    <string name="btn_select_district">Select District</string>
    <string name="btn_select_location">Select Location</string>
    <string name="btn_select_state">Select State</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_out">Log Out</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_start_trip">Start Trip</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_take_a_photo">Take A Photo</string>
    <string name="btn_take_photo">Take Photo</string>
    <string name="btn_tap_to_confirm"> Confirm </string>
    <string name="btn_time">Time</string>
    <string name="btn_trip_history">Trip History</string>
    <string name="btn_upload">Upload</string>
    <string name="hint_address_1">Address 1</string>
    <string name="hint_city">City</string>
    <string name="hint_confirm_password">Confrim Password</string>
    <string name="hint_country">Country</string>
    <string name="hint_email">rajib@example.com</string>
    <string name="hint_dob">05/06/1990</string>
    <string name="pick_date">Pick Date</string>
    <string name="hint_email_address"><i>Email Address</i></string>
    <string name="hint_enter_your_city">Enter your City</string>
    <string name="hint_enter_your_name_here">Enter your name here</string>
    <string name="hint_enter_your_number">Enter Your Number</string>
    <string name="hint_enter_your_password">Enter your Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_name">Name</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_password"><i>Password</i></string>
    <string name="hint_phone_number">Phone</string>
    <string name="hint_postal_code">Postal Code</string>
    <string name="hint_region_or_state">Region/State</string>
    <string name="hint_search">Search…</string>
    <string name="hint_state">State</string>
    <string name="hint_type_something">Type Something…</string>
    <string name="hint_username">Username</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="about_content">Happyy Ride is a ride sharing apps.Happyy Ride and the Happyy Ride logos are trademarks of Happyy Ride Limited.All rights reserved.</string>
    <string name="label_about">About</string>
    <string name="label_termsand_condition">Terms of Service</string>
    <string name="label_selectvehicle">Select Vehicle</string>
    <string name="label_vehicle_info">Vehicle Information</string>
    <string name="label_share">Invite</string>
    <string name="label_notification">Notifications</string>
    <string name="label_about_this_version">About this Version</string>
    <string name="label_about_us">About Us</string>
    <string name="label_accessibility">Accessibility</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="label_account_status">Account Status</string>
    <string name="label_address">Address</string>
    <string name="label_agreement_proceed">To Proceed, please review and agree to the terms of the content below:</string>
    <string name="label_already_have_an_account">Already have an Account?</string>
    <string name="label_approved">Approved</string>
    <string name="label_at_the_end_of_the_trip">At the end of the Trip</string>
    <string name="label_background_check_consent_form">Background Check Consent Form</string>
    <string name="label_backup_restore_message">\'Backing up\' means making a copy of your most important files. This can then be used if the original copy is used. Preferably the second copy should be held at a different location to the original and be kept in a secure environment.</string>
    <string name="label_bank_passbook">Bank Passbook</string>
    <string name="label_base_fare">Base Fare</string>
    <string name="label_call">Call</string>
    <string name="label_cancelled">Cancelled</string>
    <string name="label_cash_collected">Cash Collected</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_collect_cash">Collect Cash</string>
    <string name="label_commercial_insurance">Commercial Insurance</string>
    <string name="label_consent_agreement">I understand that the information provide by me may be used by Happyy Ride, or its affiliates, authbridge research services private limited or its affiliates (being a third party agency appointed by HappyyRide), or any third party appointed by HappyyRide from time to time, to verify and validate the information I have provided as necessary background Checks. I understand that the third party agency appointed by HappyyRide may obtain Information it deems appropriate from various sources including, but not limited to, current and past employers, Criminal conviction records, educational records, professional and personal references and other verifying sources / authorities.</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_continue_to_earn_more_money">Continue to earn more money \nin your spare time</string>
    <string name="label_create_your_account_password">Create your account Password</string>
    <string name="label_current_rating">Current Rating</string>
    <string name="label_daily_earnings">Daily Earnings</string>
    <string name="label_did_you_know">Thousands of \nDrivers are using Happyy Ride</string>
    <string name="label_distance">Distance</string>
    <string name="label_documents">Documents</string>
    <string name="label_driver">Drive</string>
    <string name="label_driver_cum_owner">Driver cum Owner</string>
    <string name="label_driver_cum_owner_option">Choose this option if you own the vehicle and plan to drive yourself too</string>
    <string name="label_driver_documents">Driver Documents</string>
    <string name="label_driver_licence_with_badge_number">Driver Licence with Badge Number</string>
    <string name="label_driver_license">Vehicle Registration</string>
    <string name="label_drop_off">Drop Off</string>
    <string name="label_duration">Duration</string>
    <string name="label_earn_more">Earn More</string>
    <string name="label_email">Email</string>
    <string name="label_ensure_all_information">Ensure all information is readable and not blurry. Make sure that all corners of the documents are visible. You documents may not be accepted if it cannot be read properly or all four corners are not visible.</string>
    <string name="label_enter_the_4_digit_code">Enter the 4 - digit code sent to you \nat</string>
    <string name="label_enter_the_verification_code">Enter the verification code sent to you</string>
    <string name="label_error">Error</string>
    <string name="label_estimated_payout">Estimated Payout</string>
    <string name="label_fare">Fare</string>
    <string name="label_fitness_certificate">Fitness Certificate</string>
    <string name="label_fri">Fri</string>
    <string name="label_help">Help</string>
    <string name="label_hours_online"> Hrs Online</string>
    <string name="label_i_accept">I Accept</string>
    <string name="label_i_agree_to_terms_and_conditions">I Agree to the Terms and Conditions</string>
    <string name="label_i_agree_to_the">I Agree to the </string>
    <string name="label_i_agree_to_the_terms_and_conditions">I Agree to the Terms and Conditions</string>
    <string name="label_i_am_deaf_or_hard_of_hearing">I"'"m deaf or hard of hearing</string>
    <string name="label_if_a_rider_reports_a_problem">If a rider reports a problem, the reason will appear here.</string>
    <string name="label_keep_driving_and_see">Keep driving and see what people say!</string>
    <string name="label_la_taxi">HAPPYY</string>
    <string name="label_happyy_ride">HAPPYY</string>
    <string name="label_happyy">HAPPYY</string>
    <string name="label_la_taxi_fee">HappyyRide Fee</string>
    <string name="label_legal_consent">Legal Consent</string>
    <string name="label_logout">Logout</string>
    <string name="label_make_sure_your_document_is_readable">Make sure your Document \nis readable</string>
    <string name="label_map_licences">Map Licences</string>
    <string name="label_missing">Missing</string>
    <string name="label_mon">Mon</string>
    <string name="label_NA">N/A</string>
    <string name="label_name">Rider Name</string>
    <string name="label_no_comments_yet">No Comments Yet</string>
    <string name="label_no_data_available">No Data Available</string>
    <string name="label_no_issues_reported">No Issues Reported</string>
    <string name="label_no_locations">No Locations</string>
    <string name="label_no_notes_found">No Notes Found</string>
    <string name="label_sample_code">HRIN1</string>
    <string name="label_share_message">Share this code with two of your friends and ask them to use the code for their first ride.</string>
    <string name="label_share_invite_code"> Share your invite code</string>
    <string name="label_way_bill">Way Bill</string>
    <string name="sample_name">Name</string>
</resources>