<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/welcome_bg"
    tools:context="ride.happyy.driver.activity.InviteActivity">

    <LinearLayout
        android:id="@+id/ll_about_software_licences"
        style="@style/MenuItemParent"
        android:layout_marginTop="10dp"
        android:background="?selectableItemBackground"
        >

        <ride.happyy.driver.widgets.CustomTextView
            style="@style/MenuItemLabel"

            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textSize="24dp"
            android:text="@string/label_share_invite_code"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_about_map_licences"
        style="@style/MenuItemParent"
        android:background="?selectableItemBackground"
        >

        <ride.happyy.driver.widgets.CustomTextView
            android:id="@+id/code_tv"
            style="@style/MenuItemLabel"
            android:gravity="center"
            android:padding="40dp"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:background="@color/blue_transparent_70"
            android:text="@string/label_sample_code"/>



    </LinearLayout>

   <LinearLayout
       style="@style/MenuItemParent">
       <ride.happyy.driver.widgets.CustomTextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingLeft="20dp"
           android:paddingRight="20dp"
           android:layout_marginTop="10dp"
           android:gravity="left"
           android:textColor="@color/text_5"
           android:text="@string/label_share_message"
           android:textAppearance="?android:attr/textAppearanceMedium"/>

   </LinearLayout>

    <LinearLayout
        style="@style/MenuItemParent"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btn_invite_friends"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="INVITE "
            android:textColor="@color/white"
            android:background="@color/blue_click"/>

    </LinearLayout>




</LinearLayout>
