<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NestedScrollBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_earning"
    tools:context="ride.happyy.driver.fragments.AccountsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_accounts_profile_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal|top"
                    android:background="@drawable/circle_carbon_transparent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_profile_photo_default"/>

                <ImageButton
                    android:id="@+id/ib_accounts_edit_account"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_marginLeft="35dp"
                    android:background="@drawable/btn_click_circle_app"
                    android:padding="5dp"
                    android:elevation="4dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_edit"/>

                <ride.happyy.driver.widgets.CustomTextView
                    android:id="@+id/txt_accounts_driver_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="110dp"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="@string/sample_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_4"
                    android:textStyle="bold"/>

            </FrameLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/line_dotted_gray_vertical"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_accounts_driver_car_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal|top"
                    android:background="@drawable/circle_carbon_transparent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_vehicle_dummy"/>

                <ImageButton
                    android:id="@+id/ib_accounts_edit_car_details"
                    android:layout_width="30dp"
                    android:visibility="gone"
                    android:layout_height="30dp"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_marginLeft="35dp"
                    android:background="@drawable/btn_click_circle_red_1"
                    android:elevation="4dp"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_edit"/>

                <ride.happyy.driver.widgets.CustomTextView
                    android:id="@+id/txt_accounts_vehicle_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="110dp"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="Account"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_4"/>

            </FrameLayout>


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"

        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:background="@color/colorPrimary"
            android:paddingRight="2dp"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/white"

            android:text="Lifetime Earning"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:text=":"/>
            <TextView
                android:id="@+id/accountLifeTimeEarningTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text="৳ 5000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="Lifetime Trip"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text=":"/>
            <TextView
                android:id="@+id/accountLifetimeTripTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text="20"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="Referral Bonus"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text=":"/>
            <TextView
                android:id="@+id/accountReferralBonusTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text="৳ 0"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:paddingTop="5dp"
            android:paddingBottom="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff0000">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="Total Due"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text=":"/>
            <TextView
                android:id="@+id/accountTotalDueTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:text="৳ 500"/>


        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/accounCommRateTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:background="@color/colorPrimary1"
                android:textColor="@color/white"
                android:layout_marginRight="5dp"
                android:text="Comm. Rate : 80"/>
            <TextView
                android:id="@+id/accountRatingTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:textSize="20dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:text="Ratting : 90%"/>
        </LinearLayout>


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">


            <LinearLayout
                android:id="@+id/ll_accounts_help"
                style="@style/MenuItemParent"
                android:background="?selectableItemBackground">

                <ImageView
                    style="@style/MenuItemImage"
                    app:srcCompat="@drawable/ic_help"/>

                <ride.happyy.driver.widgets.CustomTextView
                    style="@style/MenuItemLabel"
                    android:text="@string/label_help"/>

                <ImageView
                    style="@style/MenuItemArrow"
                    app:srcCompat="@drawable/ic_toolbar_back"/>
            </LinearLayout>

            <View
                style="@style/MenuItemUnderline"/>


            <LinearLayout
                android:id="@+id/ll_accounts_way_bill"
                style="@style/MenuItemParent"
                android:visibility="gone"
                android:background="?selectableItemBackground">

                <ImageView
                    style="@style/MenuItemImage"
                    app:srcCompat="@drawable/ic_way_bill"/>

                <ride.happyy.driver.widgets.CustomTextView
                    style="@style/MenuItemLabel"
                    android:text="@string/label_way_bill"/>

                <ImageView
                    style="@style/MenuItemArrow"
                    app:srcCompat="@drawable/ic_toolbar_back"/>
            </LinearLayout>

            <View
                android:visibility="gone"
                style="@style/MenuItemUnderline"/>

            <LinearLayout
                android:id="@+id/ll_accounts_documents"
                style="@style/MenuItemParent"
                android:background="?selectableItemBackground">

                <ImageView
                    style="@style/MenuItemImage"
                    app:srcCompat="@drawable/ic_documents"/>

                <ride.happyy.driver.widgets.CustomTextView
                    style="@style/MenuItemLabel"
                    android:text="@string/label_documents"/>

                <ImageView
                    style="@style/MenuItemArrow"
                    app:srcCompat="@drawable/ic_toolbar_back"/>
            </LinearLayout>

            <View
                style="@style/MenuItemUnderline"/>


            <LinearLayout
                android:id="@+id/ll_accounts_settings"
                style="@style/MenuItemParent"
                android:background="?selectableItemBackground">

                <ImageView
                    style="@style/MenuItemImage"
                    app:srcCompat="@drawable/ic_settings"/>

                <ride.happyy.driver.widgets.CustomTextView
                    style="@style/MenuItemLabel"
                    android:text="@string/btn_settings"/>

                <ImageView
                    style="@style/MenuItemArrow"
                    app:srcCompat="@drawable/ic_toolbar_back"/>
            </LinearLayout>

            <View
                style="@style/MenuItemUnderline"/>


            <LinearLayout
                android:id="@+id/ll_accounts_about"
                style="@style/MenuItemParent"
                android:background="?selectableItemBackground">

                <ImageView
                    style="@style/MenuItemImage"
                    app:srcCompat="@drawable/ic_about"/>

                <ride.happyy.driver.widgets.CustomTextView
                    style="@style/MenuItemLabel"
                    android:text="@string/label_about"/>

                <ImageView
                    style="@style/MenuItemArrow"
                    app:srcCompat="@drawable/ic_toolbar_back"/>
            </LinearLayout>

            <View
                style="@style/MenuItemUnderline"/>


            <Button
                android:id="@+id/btn_accounts_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_click_app_rectangle_with_semicircle_edge"
                android:minHeight="40dp"
                android:minWidth="100dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/btn_sign_out"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
